# zeroclaw-scanner

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/architecture/: THREAT_MODEL.md  draft_Json_Schma.json  zeroclawarchitecture.docx
docs/reports/: # Deep Scan Mapping — Varshit.md  CLAW-AUTH-PROXY-AUDIT Kailash.md  OWASP-CHECKLIST.md  STREAM-INVENTORY.md  zeroclaw_security_review Sania.md
docs/reports/given By John/: CLAW_AUTH_PROXY_SECURITY_REPORT.md  SECURITY_DEEP_SCAN_REPORT.md  ZEROCLAW_LA_FORK_SECURITY_REPORT.md
reports/: TEMPLATE.md
src/zeroclaw/: cli.py  models.py  reporter.py
src/zeroclaw/scanners/: auth_scanner.py  dependency_scanner.py  pattern_scanner.py  secret_scanner.py
tests/: conftest.py  test_dependency_scanner.py  test_pattern_scanner.py  test_secret_scanner.py  test_smoke.py
